# Learn-Qt5

./: .gitignore
anki/: CMakeLists.txt  Deck.qml  README.md  cell.qml  counter.cpp  counter.h  main.cpp  main.qml  outputer.cpp  outputer.h  qml.qrc
cm/: CMakeLists.txt
cm/cm-lib/: CMakeLists.txt
cm/cm-lib/src/controller/: mastercontroller.cpp  mastercontroller.h
cm/cm-ui/: CMakeLists.txt  qml.qrc
cm/cm-ui/src/: main.cpp
cm/cm-ui/views/: mainWindow.qml
scratchpad/: main.cpp  main.qml  scratchpad.pro
